Fix: dev 브랜치 병합 완료, get url 충돌 오류 해결
